implemented bootstrap gem for user interface

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,10 @@
-home page
-<% if user_signed_in? %>
-  <strong><%= current_user.email %></strong>
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link btn btn-default'  %>
-<% end %>
+<div class="row container">
+  <div class="col-md-3 btn-group btn-group-vertical">
+    <button class="btn btn-default nav">
+      Emil Templates
+    </button>
+    <button class="btn btn-default nav">
+      People
+    </button>
+  </div>
+</div>
